projects/addon-mobile/components/mobile-calendar/mobile-calendar.style.less
@import '@taiga-ui/core/styles/taiga-ui-local';

@accent: var(--tui-text-action);
@secondary: var(--tui-text-secondary);
@border: var(--tui-border-normal);
@background: var(--tui-background-base);

:host {
    display: block;
    block-size: 100%;
    font-family: -apple-system, BlinkMacSystemFont, Roboto, sans-serif;
    color: var(--tui-text-primary);
    -webkit-tap-highlight-color: transparent;
}

.t-header {
    position: relative;
    display: flex;
    align-items: center;
    block-size: 3.5rem;
    padding: 0 1rem;
    // TODO: research if it can be used in rem units
    /* stylelint-disable-next-line */
    border-bottom: 0.5px solid @border;

    :host._ios & {
        block-size: 2.75rem;
        border-bottom: none;
    }
}

.t-close {
    inline-size: 1.5rem;
    block-size: 1.5rem;
    margin-right: 2rem;

    :host._ios & {
        display: none;
    }
}

.t-link {
    margin-left: auto;
    flex-shrink: 0;
    font-size: 0.875rem;
    line-height: 1rem;
    font-weight: 500;
    text-transform: uppercase;
    color: @accent;

    &_close {
        display: none;
    }

    :host._ios & {
        min-inline-size: 3.75rem;
        text-align: end;
        font-size: 0.9375rem;
        line-height: 1.125rem;
        font-weight: normal;
        letter-spacing: 0.018125rem;
        text-transform: none;

        &_close {
            display: block;
            margin: 0 auto 0 0;
            text-align: start;
        }
    }
}

.t-label {
    flex-grow: 1;
    margin: 0;
    font-size: 1.25rem;
    line-height: 3.5rem;
    font-weight: 500;
    letter-spacing: -0.0125rem;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    & + .t-link {
        padding-left: 1rem;
    }

    :host._ios & {
        font-size: 1.0625rem;
        font-weight: 600;
        letter-spacing: -0.025625rem;
        text-align: center;
    }
}

.t-years {
    .scrollbar-hidden();

    block-size: 4.0625rem;
    background-color: @background;
    // TODO: research if it can be used in rem units
    /* stylelint-disable-next-line */
    box-shadow: 0 0.5px @border;

    :host._ios & {
        background-color: transparent;
    }
}

.t-years-wrapper {
    display: flex;
    block-size: 4.0625rem;
}

.t-year {
    .button-clear();

    outline: none;
    // TODO: investigate problem in mobile calendar
    /* stylelint-disable-next-line */
    inline-size: 20vw;
    flex-shrink: 0;
    font-size: 0.9375rem;
    font-weight: bold;
    letter-spacing: 0.015625rem;
    cursor: pointer;
    opacity: 0.1;
    transform: scale(0.73);
    transition:
        color,
        opacity,
        transform 0.2s;

    &[data-state='adjacent'] {
        transform: scale(0.86);
        opacity: 0.3;
    }

    &[data-state='active'] {
        color: @accent;
        opacity: 1;
        transform: scale(1);
    }
}

.t-week {
    display: flex;
    align-items: center;
    block-size: 1.875rem;
    inline-size: 20.75rem;
    max-inline-size: 100%;
    margin: 0 auto;
    font-size: 0.75rem;

    :host._ios & {
        inline-size: 22.625rem;
        font-size: 0.6875rem;
        font-weight: 500;
        color: @secondary;
    }
}

.t-day {
    flex: 1;
    text-align: center;
}

.t-months {
    .scrollbar-hidden();

    block-size: ~'calc(100% - 9.5rem)';
    box-shadow: 0 -1px @border;
    overflow-x: hidden;

    :host._ios & {
        block-size: ~'calc(100% - 8.75rem)';
    }
}

.t-month-wrapper {
    margin: 0.625rem 0 -0.625rem;
}

.t-month {
    block-size: 2.75rem;
    line-height: 2.75rem;
    padding-left: 1rem;
    font-size: 0.875rem;
    font-weight: 500;
    text-transform: uppercase;
    margin: 0 0 1.25rem;
    box-sizing: border-box;
    // TODO: research if it can be used in rem units
    /* stylelint-disable-next-line */
    border-bottom: 0.5px solid @border;

    :host._ios & {
        block-size: 3.125rem;
        margin: 0;
        border-bottom: none;
        text-transform: none;
        font-size: 1.375rem;
        line-height: 3.125rem;
        letter-spacing: 0.02rem;
        font-weight: bold;
    }
}

.t-calendar {
    margin: 0 auto;
    transition: opacity 0.2s;
}

.t-week,
.t-years,
.t-months {
    .transition(opacity);

    opacity: 0;

    :host(._initialized) & {
        opacity: 1;
    }
}

